bk_ida/gccida/g2/gen_type
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/c-aux-info.c:788:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/c-aux-info.c:794:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/c-aux-info.c:802:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/c-aux-info.c:808:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/c-aux-info.c:812:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/c-aux-info.c:873:40: error: subscript of pointer to incomplete type 'struct rtx_def'
for ( i = concat( "", *( _QWORD *)( rtl[1].fld[0].rtwint + 32), 0LL); 
                                    ~~~^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/config.h:7:8: note: forward declaration of 'struct rtx_def'
struct rtx_def;
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/c-aux-info.c:875:41: error: subscript of pointer to incomplete type 'struct rtx_def'
i = concat( data_type, *( _QWORD *)( rtl[1].fld[0].rtwint + 32), 0LL) ) 
                                     ~~~^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/config.h:7:8: note: forward declaration of 'struct rtx_def'
struct rtx_def;
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/c-aux-info.c:909:44: error: use of undeclared identifier 'stru_6F109F'
ret_val = concat( "( ", ret_val, ( char *)&stru_6F109F._IO_write_ptr + 7, 0LL); 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/c-aux-info.c:928:32: error: use of undeclared identifier 'stru_6F109F'
sprintf( buff, ( const char *)&stru_6F109F._IO_save_end + 1, ( unsigned int)( v41 / v42)); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/c-aux-info.c:1020:20: error: expected expression
v16 = ( tree_node *)v12[2]; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/c-aux-info.c:1020:9: error: use of undeclared identifier 'tree_node'
v16 = ( tree_node *)v12[2]; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/c-aux-info.c:1021:26: error: expected expression
if ( v16 == ( tree_node *)*( &global_trees + 27) ) 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/c-aux-info.c:1021:15: error: use of undeclared identifier 'tree_node'
if ( v16 == ( tree_node *)*( &global_trees + 27) ) 
              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/c-aux-info.c:1030:20: error: expected expression
v16 = ( tree_node *)v12[2]; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/c-aux-info.c:1030:9: error: use of undeclared identifier 'tree_node'
v16 = ( tree_node *)v12[2]; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/c-aux-info.c:1057:37: error: use of undeclared identifier 'stru_6F109F'
v11 = concat( " ( ", v14, ( char *)&stru_6F109F._IO_write_ptr + 7, 0LL); 
                                    ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_type/src/obj/c-aux-info.o] Error 1
